<resources>
    <string name="app_name">TestMan</string>
    <integer name="com_vk_sdk_AppId">6046576</integer>
    <string name="testman_description">Пройти тесты\nлегко и быстро</string>

    <string name="login_with">Войти с помощью</string>
    <string name="exit">Выйти</string>
    <string name="my_tests">Мои тесты</string>
    <string name="create_test">Создать тест</string>
    <string name="search_test">Найти тест</string>
    <string name="test_man">Test Man</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="mark_begins">Оценка начинается с:</string>
    <string name="default_seekbar_value__five">75%</string>
    <string name="seekbar_note__five">5:</string>
    <string name="seekbar_note__four">4:</string>
    <string name="default_seekbar_value__four">50%</string>
    <string name="seekbar_note__three">3:</string>
    <string name="default_seekbar_value__three">25%</string>
    <string name="show_wrong">Показывать ошибки</string>
    <string name="timer">Таймер</string>
    <string name="zero_zero">00</string>
    <string name="colon">:</string>
    <string name="save">Сохранить</string>
    <string name="fill_name">Введите название</string>
    <string name="testman">TestMan</string>

    <string name="server_url">http://testman-server.herokuapp.com/</string>
    <string name="add_answer">add_answer/</string>
    <string name="add_test">add_test/</string>
    <string name="get_all_tests">get_all_tests/</string>
    <string name="get_test_by_id">get_test_by_id/</string>
    <string name="get_tests_by_author">get_tests_by_author/</string>
    <string name="get_answer_by_id">get_answer_by_id/</string>
    <string name="get_answers_by_author">get_answers_by_author/</string>

    <string name="begin">Начать</string>
    <string name="finish">Закончить</string>
    <string name="five">5</string>
    <string name="add_photo">Добавить изображение</string>
    <string name="change_input">Изменить ввод</string>
    <string name="delete">Удалить</string>
    <string name="scores_for_task">Баллы за задание:</string>
    <string name="change_test">Изменить</string>
    <string name="my_answers">Мои ответы</string>
    <string name="delete_test">delete_test/</string>
    <string name="update_test">update_test/</string>
    <string name="clear_answers_by_id">clear_answers_by_id/</string>
    <string name="clearAnswers">Очистить ответы</string>
</resources>
