<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        app:layout_widthPercent="100%"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="22dp">

            <TextView
                android:id="@+id/change_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_input"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="18dp" />

            <TextView
                android:id="@+id/add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"/>

            <TextView
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="18dp"/>

            <SeekBar
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="8dp">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scores_for_task"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/reduce_scores"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/triangle"
                        android:rotation="270"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="1dp"/>

                    <TextView
                        android:id="@+id/scores"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:textStyle="bold"
                        android:textSize="50sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/increase_scores"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/triangle"
                        android:rotation="90"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="1dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.percent.PercentFrameLayout>