<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.android.petro.testman.Activities.LoginActivity"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/test_man_icon"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/bigtestmanicon"
            android:adjustViewBounds="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_man"
            android:textSize="70sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/test_man_icon"
            android:id="@+id/testman"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testman_description"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintTop_toBottomOf="@+id/testman"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/description" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/login_vk_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with"
                android:textColor="@color/vk_color"
                android:textSize="19sp"
                android:onClick="showDialog"/>
            <ImageView
                android:id="@+id/login_vk_icon"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/vkicon"
                android:layout_marginStart="6dp"
                android:onClick="showDialog"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>